; ModuleID = '/home/carl/AnghaBench/mpv/stream/extr_stream_libarchive.c_volume_close.c'
source_filename = "/home/carl/AnghaBench/mpv/stream/extr_stream_libarchive.c_volume_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_archive_volume = type { i32*, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mp_archive_volume*)* @volume_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @volume_close(%struct.mp_archive_volume* %0) #0 {
  %2 = alloca %struct.mp_archive_volume*, align 8
  store %struct.mp_archive_volume* %0, %struct.mp_archive_volume** %2, align 8
  %3 = load %struct.mp_archive_volume*, %struct.mp_archive_volume** %2, align 8
  %4 = getelementptr inbounds %struct.mp_archive_volume, %struct.mp_archive_volume* %3, i32 0, i32 0
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %24

7:                                                ; preds = %1
  %8 = load %struct.mp_archive_volume*, %struct.mp_archive_volume** %2, align 8
  %9 = getelementptr inbounds %struct.mp_archive_volume, %struct.mp_archive_volume* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = load %struct.mp_archive_volume*, %struct.mp_archive_volume** %2, align 8
  %12 = getelementptr inbounds %struct.mp_archive_volume, %struct.mp_archive_volume* %11, i32 0, i32 1
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  %16 = icmp ne i32* %10, %15
  br i1 %16, label %17, label %24

17:                                               ; preds = %7
  %18 = load %struct.mp_archive_volume*, %struct.mp_archive_volume** %2, align 8
  %19 = getelementptr inbounds %struct.mp_archive_volume, %struct.mp_archive_volume* %18, i32 0, i32 0
  %20 = load i32*, i32** %19, align 8
  %21 = call i32 @free_stream(i32* %20)
  %22 = load %struct.mp_archive_volume*, %struct.mp_archive_volume** %2, align 8
  %23 = getelementptr inbounds %struct.mp_archive_volume, %struct.mp_archive_volume* %22, i32 0, i32 0
  store i32* null, i32** %23, align 8
  br label %24

24:                                               ; preds = %17, %7, %1
  ret void
}

declare dso_local i32 @free_stream(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
